--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #FF0000;
+    background-color: #FF0000; /* Couleur rouge pour l'entête */
     color: #fff;
     padding: 10px 20px;
     text-align: center;
