--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #FF0000; /* Définis la couleur de fond en rouge */
+    background-color: #BC002D; /* Définis la couleur de fond en rouge */
     color: white; /* Change la couleur du texte pour améliorer la visibilité */
     text-align: center;
     padding: 20px 10px;
