--- a/style.css
+++ b/style.css
@@ -41,12 +41,12 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #BC002D; /* Changement de couleur au survol */
+    background-color: #e5afbc; /* Changement de couleur au survol */
 }
 
 footer {
     background-color: #BC002D;
-    color: #fff;
+    color: #BC002D;
     text-align: center;
     padding: 10px 20px;
     position: fixed;
