--- a/style.css
+++ b/style.css
@@ -114,6 +114,6 @@ section {
 #headerImage {
     display: block;
     margin: 0 auto; /* Centers the image horizontally */
-    height: 100px; /* Adjust the height as needed */
+    height: 30%; /* Adjust the height as needed */
     width: auto; /* Maintain aspect ratio */
 }
